feat: Estilização do mobile

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -400,3 +400,12 @@ footer > h2{
 }
 
 
+@media screen and (max-width: 600px) {
+    .desktop{
+        display: none;
+    }
+
+    .mobile{
+        display: flex;
+    }
+}
